--- a/OccupiedMap/CMakeLists.txt
+++ b/OccupiedMap/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 # 添加 PCL 的定义和库目录
@@ -29,11 +30,17 @@ link_directories(${PCL_LIBRARY_DIRS})  # 确保PCL库目录被添加
 # 设置可执行文件的生成路径
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/${PROJECT_NAME})
 
+# 定义可执行文件
 add_executable(slam2d src/slam2d.cpp)
 add_executable(readpose src/readpose.cpp)
 
+
+# 添加依赖
 add_dependencies(slam2d ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(readpose ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
+
+# 链接库
 target_link_libraries(slam2d ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 target_link_libraries(readpose ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+
